logs/rtt.20260408-162507.log
   Compiling apas-verus v0.1.0 (/home/milnes/projects/APAS-VERUS-agent3)
error[E0432]: unresolved import `crate::Chap38::BSTParaSpecsAndLemmas::BSTParaSpecsAndLemmas::view_ord_consistent`
   --> src/Chap38/BSTParaStEph.rs:273:13
    |
273 |     pub use crate::Chap38::BSTParaSpecsAndLemmas::BSTParaSpecsAndLemmas::view_ord_consistent;
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `view_ord_consistent` in `Chap38::BSTParaSpecsAndLemmas::BSTParaSpecsAndLemmas`

error[E0432]: unresolved import `crate::Chap38::BSTParaSpecsAndLemmas::BSTParaSpecsAndLemmas::view_ord_consistent`
   --> src/Chap38/BSTParaMtEph.rs:180:13
    |
180 |     pub use crate::Chap38::BSTParaSpecsAndLemmas::BSTParaSpecsAndLemmas::view_ord_consistent;
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `view_ord_consistent` in `Chap38::BSTParaSpecsAndLemmas::BSTParaSpecsAndLemmas`
    |
help: consider importing this unresolved item through its public re-export instead
    |
180 -     pub use crate::Chap38::BSTParaSpecsAndLemmas::BSTParaSpecsAndLemmas::view_ord_consistent;
180 +     pub use crate::Chap38::BSTParaStEph::BSTParaStEph::view_ord_consistent;
    |

warning: unexpected `cfg` condition name: `never`
   --> src/Chap43/OrderedTableStEph.rs:782:15
    |
782 |         #[cfg(never)] fn union_bypassed_r158() { let ghost old_tree = self.tree.inner@;
    |               ^^^^^
    |
    = help: expected names are: `docsrs`, `feature`, `test`, `verus_keep_ghost`, and `verus_keep_ghost_body` and 31 more
    = help: consider using a Cargo feature instead
    = help: or consider adding in `Cargo.toml` the `check-cfg` lint config for the lint:
             [lints.rust]
             unexpected_cfgs = { level = "warn", check-cfg = ['cfg(never)'] }
    = help: or consider adding `println!("cargo::rustc-check-cfg=cfg(never)");` to the top of the `build.rs`
    = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
    = note: requested on the command line with `-W unexpected-cfgs`

For more information about this error, try `rustc --explain E0432`.
warning: `apas-verus` (lib) generated 1 warning (1 duplicate)
error: could not compile `apas-verus` (lib) due to 2 previous errors; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
warning: `apas-verus` (lib test) generated 1 warning
error: could not compile `apas-verus` (lib test) due to 2 previous errors; 1 warning emitted
error: command `/home/milnes/.rustup/toolchains/1.94.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --message-format json-render-diagnostics --release` exited with code 101
Elapsed: 23s
